--- a/lab-a/style.css
+++ b/lab-a/style.css
@@ -42,6 +42,7 @@ h6 {
 }
 
 .container {
+  height: 100vh;
   display: grid;
   grid-template-areas: 'header' 'menu' 'main' 'ads' 'footer';
 }
@@ -73,6 +74,7 @@ h6 {
 @media (min-width: 768px) {
   .container {
     grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: auto auto 1fr auto;
     grid-template-areas:
       'header header'
       'menu ads'
@@ -84,6 +86,7 @@ h6 {
 @media (min-width: 1024px) {
   .container {
     grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: auto 1fr auto;
     grid-template-areas:
       'header header header header'
       'menu main main ads'
