--- a/lab-a/style.css
+++ b/lab-a/style.css
@@ -18,6 +18,8 @@
 body {
   line-height: calc(1em + 0.5rem);
   -webkit-font-smoothing: antialiased;
+  background-color: var(--background);
+  color: var(--text);
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
     'Helvetica Neue', sans-serif;
 }
