--- a/lab-a/style.css
+++ b/lab-a/style.css
@@ -77,6 +77,37 @@ h6 {
   grid-area: menu;
 }
 
+.container > .menu > ol {
+  list-style-type: none;
+  display: grid;
+  gap: 1em;
+  padding: 0;
+}
+
+.container > .menu > ol > li {
+  text-align: center;
+  padding: 0.5em;
+  width: 100%;
+}
+
+.container > .menu > ol > li.active {
+  color: var(--primary);
+  border-radius: 5px;
+}
+
+.container > .menu > ol > li.active > a {
+  border: 3px solid var(--shadow);
+}
+
+.container > .menu > ol > li > a {
+  text-decoration: none;
+  display: block;
+  color: inherit;
+  padding: 1rem;
+  width: 100%;
+  height: 100%;
+}
+
 .container > .main {
   grid-area: main;
 }
