--- a/lab-a/style2.css
+++ b/lab-a/style2.css
@@ -108,3 +108,21 @@ h6 {
 .container > .menu > ol > li:not(.active) > a:hover {
   outline: 3px solid var(--shadow);
 }
+
+.container > .main {
+  outline: 2px var(--shadow) solid;
+}
+
+.container > .main > h2,
+.container > .main > h3 {
+  margin-bottom: 1rem;
+}
+
+.container > .main > p {
+  margin-bottom: 1.5rem;
+}
+
+.container > .main > p:last-child {
+  margin-bottom: 0;
+}
+
