refactor advertisement component

--- a/lab-a/style2.css
+++ b/lab-a/style2.css
@@ -129,6 +129,7 @@ h6 {
 .container > .advertisement {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .container > .advertisement > img {
