--- a/lab-a/style2.css
+++ b/lab-a/style2.css
@@ -142,6 +142,18 @@ h6 {
   .container > .advertisement {
     width: 50%;
   }
+
+  .container > .header {
+    order: -3;
+  }
+
+  .container > .menu {
+    order: -2;
+  }
+
+  .container > .advertisement {
+    order: -1;
+  }
 }
 
 @media (min-width: 1024px) {
