--- a/lab-a/style2.css
+++ b/lab-a/style2.css
@@ -16,7 +16,7 @@
 }
 
 body {
-  line-height: calc(1em + 0.5rem);
+  line-height: 1.5;
   -webkit-font-smoothing: antialiased;
   background-color: var(--background);
   color: var(--text);
@@ -72,7 +72,11 @@ h6 {
 }
 
 .container > .header {
-  text-transform: uppercase;
+  text-transform: capitalize;
+}
+
+.container > .footer {
+  font-style: italic;
 }
 
 .container > .menu > ol {
@@ -110,7 +114,8 @@ h6 {
 }
 
 .container > .main {
-  outline: 2px var(--shadow) solid;
+  outline: 1px var(--primary) solid;
+  text-align: center;
 }
 
 .container > .main > h2,
