--- a/lab-a/style.css
+++ b/lab-a/style.css
@@ -115,6 +115,17 @@ h6 {
 .container > .main {
   grid-area: main;
   outline: 2px var(--shadow) solid;
+  position: relative;
+}
+
+.container > .main > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+  opacity: 0.2;
+  max-width: 80%;
 }
 
 .container > .main > h2,
