--- a/lab-a/style2.css
+++ b/lab-a/style2.css
@@ -116,6 +116,16 @@ h6 {
 .container > .main {
   outline: 1px var(--primary) solid;
   text-align: center;
+  position: relative;
+}
+
+.container > .main > img {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(0.6) scaleX(-1);
+  z-index: -1;
+  opacity: 0.2;
 }
 
 .container > .main > h2,
