--- a/lab-a/style2.css
+++ b/lab-a/style2.css
@@ -119,7 +119,7 @@ h6 {
   position: relative;
 }
 
-.container > .main > img {
+.container > .main > .background {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -147,7 +147,7 @@ h6 {
   align-items: center;
 }
 
-.container > .advertisement > img {
+.container > .advertisement > .ad {
   border: 2px solid var(--primary);
   border-radius: 5px;
 }
